# os-media-controls

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/os_media_controls/: OsMediaControlsPlugin.kt
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: os_media_controls.podspec
ios/Classes/: OsMediaControlsPlugin.swift
lib/: os_media_controls.dart  os_media_controls_method_channel.dart  os_media_controls_platform_interface.dart
lib/src/: media_control.dart  media_control_event.dart  media_metadata.dart  playback_state.dart
linux/: CMakeLists.txt  os_media_controls_plugin.cpp
linux/include/os_media_controls/: os_media_controls_plugin.h
macos/: os_media_controls.podspec
macos/Classes/: OsMediaControlsPlugin.swift
test/: os_media_controls_method_channel_test.dart  os_media_controls_test.dart
windows/: CMakeLists.txt  os_media_controls_plugin.cpp  os_media_controls_plugin.h  os_media_controls_plugin_c_api.cpp
windows/include/os_media_controls/: os_media_controls_plugin.h  os_media_controls_plugin_c_api.h
